--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,22 @@
 /* Google Fonts import - from https://fonts.google.com/ */
 @import url('https://fonts.googleapis.com/css2?family=Exo:wght@100;200;300;400;500;600;700&family=Roboto:wght@100;300;400;500;700&display=swap');
 
-/* ------------------------------ Colours */
+/*--------------------------------------------Colors*/
 
 .bg-color-name-title {
     background-color: #676767;
 }
 
 .bg-color-three-reasons {
-    background-color: white;
+    background-color: #ffffff;
 }
 
 .bg-color-personal-info {
     background-color: #f4f4f4;
+}
+
+.bg-color-skills {
+    background-color: #ffffff;
 }
 
 .bg-color-work-history {
@@ -20,11 +24,19 @@
 }
 
 .bg-color-contact {
-    background-color: white;
+    background-color: #ffffff;
+}
+
+.bg-color-conferences {
+    background-color: #f4f4f4;
+}
+
+.bg-color-groups {
+    background-color: #ffffff;
 }
 
 .ui-menu-color-home {
-    background-color: #e66e22;
+    background-color: #e67e22;
 }
 
 .ui-menu-color-resume {
@@ -36,12 +48,35 @@
 }
 
 .ui-menu-color-download {
-    background-color: #525252;
+    background-color: #d9a81d;
 }
 
-/* ------------------------------ Special paddings, margins & text */
 
-h1,h2,h3,h4 {
+.ui-menu-color-github {
+    background-color: #1c4a6c;
+}
+
+.ui-menu-color-interests {
+    background-color: #e74c3c;
+}
+
+
+
+
+body {
+    font-family: Roboto, sans-serif;
+    font-weight: 300;
+    background-color: #525252;
+    color: #555555;
+}
+
+
+/*--------------------------------------------Special Paddings/Margins/Text*/
+
+h1,
+h2,
+h3,
+h4 {
     margin: 0;
 }
 
@@ -59,14 +94,9 @@ h1,h2,h3,h4 {
     display: inline-block;
 }
 
+
 .row-table {
     display: table;
-}
-
-.section-column {
-    display: table-cell;
-    padding: 0 30px 30px;
-    float: none;
 }
 
 .history-heading,
@@ -77,7 +107,8 @@ h1,h2,h3,h4 {
     margin-bottom: 40px;
 }
 
-/* ------------------------------ Heading */
+
+/*--------------------------------------------Heading*/
 
 header {
     margin: 0;
@@ -103,7 +134,7 @@ header {
     font-weight: 100;
     font-size: 46px;
     margin-top: 50px;
-    color: white;
+    color: #ffffff;
 }
 
 .title {
@@ -112,15 +143,7 @@ header {
     font-size: 28px;
     margin-top: 20px;
     margin-bottom: 90px;
-    color: white;
-}
-
-.list-inline-item:not(:last-child) {
-    margin: 0;
-}
-
-.menucontainer {
-    font-size: 0;
+    color: #ffffff;
 }
 
 #nav {
@@ -128,12 +151,7 @@ header {
 }
 
 #nav li {
-    font-size: 14px;
     padding: 0;
-}
-
-.active {
-    text-decoration-line: underline;
 }
 
 .menuitem {
@@ -145,15 +163,16 @@ header {
 .menuitem a {
     width: 100%;
     text-decoration: none;
-    color: white;
+    color: #ffffff;
     height: 120px;
 }
 
+
 .menuitem a i {
-    padding-top: 40px;
+    padding-top: 22px;
     display: block;
     color: #fafafa;
-    font-size: 18px;
+    font-size: 26px;
 }
 
 .menuitem span {
@@ -162,19 +181,21 @@ header {
     padding-top: 5px;
     text-align: center;
     text-transform: uppercase;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 300;
-    letter-spacing: 1px;
+    letter-spacing: 2px;
 }
 
-/* ------------------------------ Hover.css */
+
+/*--------------------------------------------Hover.css*/
 
 .hvr-sweep-to-bottom:before {
     background: rgba(0, 0, 0, 0.2);
     height: 120px;
 }
 
-/* ------------------------------ Footer */
+
+/*--------------------------------------------Footer*/
 
 footer {
     background-color: #525252;
@@ -183,19 +204,19 @@ footer {
     margin: 0;
 }
 
-.cv-pdf i {
-    font-size: 18px;
+footer .cv-pdf i {
     color: #fafafa;
     text-align: center;
+    font-size: 18px;
     padding-left: 5px;
+}
+
+footer .cv-pdf i:hover {
+    color: #e84610;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
-}
-
-.cv-pdf i:hover {
-    color: #e84610;
 }
 
 .social-links {
@@ -223,21 +244,21 @@ footer {
 }
 
 #footer-details {
-    padding: 20px;
+    margin: 20px;
 }
 
-/* ------------------------------ Three reasons */
+/*--------------------------------------------Three Reasons*/
 
 .three-reasons-icon {
     font-size: 26px;
-    color: #e66e22;
+    color: #e67e22;
 }
 
 .three-reasons-heading {
     margin-bottom: 15px;
 }
 
-/* ------------------------------ Personal Info */
+/*--------------------------------------------Personal Info*/
 
 .personal-info-item {
     margin-bottom: 20px;
@@ -248,7 +269,6 @@ footer {
 .personal-info-item .key,
 .personal-info-item .value {
     padding-right: 8px;
-    display: inline-block;
 }
 
 .personal-info-item .key p,
@@ -257,6 +277,7 @@ footer {
 }
 
 .personal-info-item .key {
+    display: inline-block;
     width: 30%;
     margin-right: 21px;
     padding-top: 2px;
@@ -268,39 +289,34 @@ footer {
 }
 
 .personal-info-item .value {
+    display: inline-block;
     position: relative;
     width: 60%;
 }
 
-/* ------------------------------ Skills */
+/*--------------------------------------------Skills*/
 
 .progress {
     position: relative;
     height: 25px;
-    margin-bottom: 4px;
 }
 
 .progress-type {
     position: absolute;
-    height: 25px;
-    width: 140px;
     left: 0px;
     font-weight: 400;
-    padding: 12px 30px 2px 10px;
+    padding: 3px 30px 2px 10px;
     color: #fafafa;
     background-color: rgba(25, 25, 25, 0.2);
 }
+
 
 .progress-section {
     margin: 40px 20px;
 }
 
-/* ------------------------------ Work History*/
 
-.history-heading {
-    color:#fafafa;
-    margin-bottom: 50px;
-}
+/*--------------------------------------------Work History*/
 
 .timeline-item {
     padding: 4em 2em 0em 2em;
@@ -309,16 +325,12 @@ footer {
     border-left: 1px solid;
 }
 
-.timeline-item h4 {
-    font-size: 1.1rem;
-}
-
 .timeline-item p {
     padding: 0;
     margin: 0;
 }
 
-.timeline-item:before {
+.timeline-item::before {
     content: attr(data-dates);
     position: absolute;
     left: 2.5em;
@@ -326,12 +338,12 @@ footer {
     display: block;
     font-family: "Exo", sans-serif;
     font-weight: 500;
-    font-size: 0.8em;
+    font-size: .8em;
     padding: 0;
     margin: 0;
 }
 
-.timeline-item:after {
+.timeline-item::after {
     width: 12px;
     height: 12px;
     display: block;
@@ -343,11 +355,16 @@ footer {
     background: #fafafa;
 }
 
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
+}
+
 .history-items {
     margin-bottom: 30px;
 }
 
-/* ------------------------------ Contact Form*/
+/*--------------------------------------------Contact*/
 
 .contact-heading {
     font-family: "Exo", sans-serif;
@@ -356,22 +373,34 @@ footer {
     margin-bottom: 20px;
 }
 
+
 .center-form {
     padding-top: 10px;
     margin: 0 auto;
-    max-width: 75%;
+    max-width: 70%;
 }
 
 button[type="submit"] {
     margin-top: 15px;
     margin-bottom: 20px;
-    color: #fafafa;
     background-color: #e84610;
+    color: #fafafa;
 }
 
-/* ------------------------------ Media Queries*/
+/*--------------------------------------------Map*/
+div#map {
+    min-height: 360px;
+}
+
+/*--------------------------------------------Media Queries*/
 
 @media(min-width: 992px) {
+    .section-column {
+        padding: 0 30px 30px;
+        float: none;
+        display: table-cell;
+    }
+
     .center-form {
         padding-top: 30px;
         min-height: 240px;
